<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:useDefaultMargins="true"
    android:columnCount="2">

    <TextView
        android:id="@+id/pet_care_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_care"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:textColor="#818285"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/pet_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_registration_form"
        android:textSize="@dimen/label_text_size"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/microchip_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/microchip_id"
        android:textColor="#818285"
        android:layout_gravity="center_horizontal"
        android:layout_columnSpan="2" />

    <EditText
        android:id="@+id/microchip_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:inputType="textCapCharacters"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/name_text"
        android:textColor="#818285"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/gender_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/gender_text"
        android:textColor="#818285"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <RadioGroup
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" >

        <RadioButton android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:onClick="onRadioButtonClicked" />

        <RadioButton android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Female"
            android:onClick="onRadioButtonClicked" />

    </RadioGroup>

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/email_address"
        android:textColor="#818285"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/access_code_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/access_code"
        android:textColor="#818285"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/access_code_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/confirm_code_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/confirm_code"
        android:textColor="#818285"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/confirm_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/breed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/breed_text"
        android:textColor="#818285"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <Spinner
        android:id="@+id/spinner_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/neutered_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/neutered_text"
        android:textColor="#818285"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <CheckBox android:id="@+id/checkbox_neutered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_neutered_text"
        android:onClick="onCheckboxClicked"
        android:checked="true"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/reset_button"
        style="@style/ResetButton"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:background="#9c9797"
        android:onClick="resetClick"
        android:text="@string/reset"
        android:layout_marginTop="40dp"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/submit_button"
        style="@style/ResetButton"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:background="#9c9797"
        android:onClick="submitClick"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal" />

</GridLayout>

</ScrollView>