<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pet_care_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="15dp"
        android:text="@string/pet_care"
        android:textColor="#818285" />

    <TextView
        android:id="@+id/pet_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:text="@string/pet_registration_form"
        android:textSize="@dimen/label_text_size"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/microchip_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="20dp"
        android:text="@string/microchip_id"
        android:textColor="#818285"
        />

    <EditText
        android:id="@+id/microchip_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:inputType="textCapCharacters" />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="183dp"
        android:layout_marginTop="10dp"
        android:text="@string/name_text"
        android:textColor="#818285" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/gender_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="181.5dp"
        android:layout_marginTop="10dp"
        android:text="@string/gender_text"
        android:textColor="#818285" />

    <RadioGroup
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="115dp"
        >

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="Male" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="Female" />

    </RadioGroup>

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="10dp"
        android:text="@string/email_address"
        android:textColor="#818285" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="110dp" />

    <TextView
        android:id="@+id/access_code_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="10dp"
        android:text="@string/access_code"
        android:textColor="#818285" />

    <EditText
        android:id="@+id/access_code_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginLeft="110dp" />

    <TextView
        android:id="@+id/confirm_code_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_code"
        android:textColor="#818285"/>

    <EditText
        android:id="@+id/confirm_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginLeft="110dp" />

    <TextView
        android:id="@+id/breed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="10dp"
        android:text="@string/breed_text"
        android:textColor="#818285" />

    <Spinner
        android:id="@+id/spinner_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginLeft="145dp" />

    <TextView
        android:id="@+id/neutered_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="10dp"
        android:text="@string/neutered_text"
        android:textColor="#818285" />

    <CheckBox android:id="@+id/checkbox_neutered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_neutered_text"
        android:onClick="onCheckboxClicked"
        android:checked="true"
        android:layout_marginLeft="150dp"/>

    <Button
        android:id="@+id/reset_button"
        style="@style/ResetButton"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:background="#9c9797"
        android:onClick="resetClick"
        android:text="Reset"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="35dp" />

    <Button
        android:id="@+id/submit_button"
        style="@style/ResetButton"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:background="#9c9797"
        android:onClick="submitClick"
        android:text="Submit"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="20dp"
        />

</LinearLayout>

</ScrollView>