<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/pet_care_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_care"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#818285" />

    <TextView
        android:id="@+id/pet_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/pet_registration_form"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pet_care_title" />

    <TextView
        android:id="@+id/microchip_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/microchip_id"
        android:textColor="#818285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pet_form_title" />

    <EditText
        android:id="@+id/microchip_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/microchip_text_view"
        app:layout_constraintLeft_toRightOf="@id/microchip_text_view"
        app:layout_constraintRight_toRightOf="parent"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:inputType="textCapCharacters"
        />

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/name_text"
        android:textColor="#818285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/microchip_text_view"
        />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/name_text_view"
        app:layout_constraintLeft_toRightOf="@id/name_text_view"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textCapWords"
        android:layout_marginLeft="42dp"
        />

    <TextView
        android:id="@+id/gender_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/gender_text"
        android:textColor="#818285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_text_view" />

    <RadioGroup
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text"
        app:layout_constraintLeft_toRightOf="@id/gender_text_view"
        android:layout_marginLeft="77dp"
        >

        <RadioButton android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:onClick="onRadioButtonClicked" />

        <RadioButton android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Female"
            android:onClick="onRadioButtonClicked" />

    </RadioGroup>

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/email_address"
        android:textColor="#818285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gender_text_view" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/email_text_view"
        app:layout_constraintLeft_toRightOf="@id/email_text_view"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textEmailAddress"
        android:layout_marginRight="8dp"
        />

    <TextView
        android:id="@+id/access_code_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/access_code"
        android:textColor="#818285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_view"
        />

    <EditText
        android:id="@+id/access_code_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/access_code_text_view"
        app:layout_constraintLeft_toRightOf="@id/access_code_text_view"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/confirm_code_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/confirm_code"
        android:textColor="#818285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/access_code_text_view" />

    <EditText
        android:id="@+id/confirm_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/confirm_code_text_view"
        app:layout_constraintLeft_toRightOf="@id/confirm_code_text_view"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/breed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/breed_text"
        android:textColor="#818285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_code_text_view" />

    <Spinner
        android:id="@+id/spinner_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintLeft_toRightOf="@id/breed_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/breed_text_view"
        />

    <TextView
        android:id="@+id/neutered_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/neutered_text"
        android:textColor="#818285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/breed_text_view" />

    <CheckBox android:id="@+id/checkbox_neutered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_neutered_text"
        android:onClick="onCheckboxClicked"
        app:layout_constraintLeft_toRightOf="@id/neutered_text_view"
        app:layout_constraintRight_toRightOf="parent"
        android:checked="true"
        android:layout_marginRight="55dp"
        app:layout_constraintBaseline_toBaselineOf="@id/neutered_text_view"/>

    <Button
        android:id="@+id/reset_button"
        style="@style/ResetButton"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:background="#9c9797"
        android:onClick="resetClick"
        android:text="@string/reset"
        app:layout_constraintTop_toBottomOf="@id/checkbox_neutered"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="160dp"
        android:layout_marginTop="60dp"
        />

    <Button
        android:id="@+id/submit_button"
        style="@style/ResetButton"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:background="#9c9797"
        android:onClick="submitClick"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/checkbox_neutered"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        />
    <!--<Button
        android:id="@+id/calc_button"
        style="@style/ResetButton"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:background="#9c9797"
        android:onClick="resetClick"
        android:text="Reset"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="536dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->

    <!--style="@style/CalcButton"-->

    <!--android:layout_marginLeft="42dp"
    android:layout_marginTop="200dp"

    app:layout_constraintTop_toBottomOf="@id/breed_text_view"-->

